refactor: 코드 리펙터 적용